--- a/.env
+++ b/.env
@@ -1,1 +1,74 @@
+APP_NAME=OhhBuddie
+APP_ENV=production
+APP_KEY=base64:9fOc63e6Gp7Gov7O4f2lNqgdSzV2NmbhkSpZ9RK1u1k=
+APP_DEBUG=true
+APP_URL=https://ohhbuddie.com
+APP_TIMEZONE=Asia/Kolkata
 
+LOG_CHANNEL=stack
+LOG_LEVEL=error
+
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=ohhbuddie
+DB_USERNAME=ohhbuddie
+DB_PASSWORD=Ohhbuddie123@
+
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
+FILESYSTEM_DRIVER=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER=smtp
+
+MAIL_HOST=smtp.hostinger.com
+
+MAIL_PORT=465
+
+MAIL_USERNAME=no-reply@showloom.com
+
+MAIL_PASSWORD=Khatu@1407
+
+MAIL_ENCRYPTION=ssl
+
+MAIL_FROM_ADDRESS=no-reply@showloom.com
+
+MAIL_FROM_NAME=no-reply
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+AWS_ACCESS_KEY_ID=AKIASE5KRNBWPLLDETZJ
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-southeast-1
+AWS_BUCKET=fileuploaderbucket
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+GOOGLE_CLIENT_ID=395308260868-5n3s5q8dtq1343pfl63q82hsne88oubr.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=https://ohhbuddie.com/auth/google/callback
+
+
+CASHFREE_API_KEY=TEST346164346dc769f4f14fbcb088461643
+CASHFREE_API_SECRET=TESTf43166c2b3d5a997da9fe3a2291d1e6b4abb131
