--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_TIMEZONE=Asia/Kolkata
 LOG_CHANNEL=stack
 LOG_LEVEL=error
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql1
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=ohhbuddie
