--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=https://ohhbuddie.com
 APP_TIMEZONE=Asia/Kolkata
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=stack1
 LOG_LEVEL=error
 
 DB_CONNECTION=mysql
