--- a/.env
+++ b/.env
@@ -72,3 +72,7 @@ GOOGLE_REDIRECT_URI=https://ohhbuddie.com/auth/google/callback
 
 CASHFREE_API_KEY=TEST346164346dc769f4f14fbcb088461643
 CASHFREE_API_SECRET=TESTf43166c2b3d5a997da9fe3a2291d1e6b4abb131
+
+PAYU_MODE=live
+PAYU_KEY=1maOcq
+PAYU_SALT=I9Pp40tbHr5qlKgzU7Lt2U1QgGTcprGp
