--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=OhhBuddie
+APP_NAME=OhhBuddiee
 APP_ENV=production
 APP_KEY=base64:9fOc63e6Gp7Gov7O4f2lNqgdSzV2NmbhkSpZ9RK1u1k=
 APP_DEBUG=true
@@ -17,7 +17,7 @@ DB_PASSWORD=Ohhbuddie123@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=locals
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
