--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=OhhBuddiee
+APP_NAME=OhhBuddie
 APP_ENV=production
 APP_KEY=base64:9fOc63e6Gp7Gov7O4f2lNqgdSzV2NmbhkSpZ9RK1u1k=
 APP_DEBUG=true
