--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ DB_PASSWORD=Ohhbuddie123@
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=locals
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
