--- a/.env
+++ b/.env
@@ -76,3 +76,10 @@ CASHFREE_API_SECRET=TESTf43166c2b3d5a997da9fe3a2291d1e6b4abb131
 PAYU_MODE=live
 PAYU_KEY=1maOcq
 PAYU_SALT=I9Pp40tbHr5qlKgzU7Lt2U1QgGTcprGp
+
+
+ZOHO_CLIENT_ID=1000.VTWB7ECPGBCKRLS27SXHGCLYBGH57J
+ZOHO_CLIENT_SECRET=27947cbfe1b0a8a7d5b319bf986e494084d1f81488
+ZOHO_REFRESH_TOKEN=1000.7b0a2ba27f9f4b622c09552558e92550.e1d475cdbe1dd57ec5bf7054d0142aea
+ZOHO_ORGANIZATION_ID=60040824848
+ZOHO_API_BASE_URL=https://invoice.zoho.com/api/v3
