--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "league/flysystem-aws-s3-v3": "~1.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "livewire/livewire": "^2.5",
+        "predis/predis": "^3.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "twilio/sdk": "^8.3"
     },
     "require-dev": {
